@@ -1,3 +1,6 @@
+20020930
+ - (djm) Tidy contrib/, add Makefile for GNOME passphrase dialogs, tweak README
+
 20020927
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/09/25 11:17:16
